npm db  to npx, change frontend entrypoint to src/

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,6 @@ services:
     depends_on:
       - backend
     volumes:
-      - ./frontend:/usr/src/app
+      - ./frontend:/usr/src/
     ports:
       - 127.0.0.1:3000:3000
